tests/snapshots/session__owner_without_forced_rls_can_act_as_admin.snap
---
source: tests/session.rs
expression: out.stdout
---
notes
  ✓ alice  select  rows: tenant_id = '…000a'  3 visible
coverage 1/4 cells (25.0%) · 3 unspecified (warn)
notes
  ○ alice  insert, update, delete
0 failed · 1 passed · 0 inconclusive
