tests/snapshots/session__setup_timeout_is_an_error.snap
---
source: tests/session.rs
expression: out.stderr
---
error: setup file tests/fixtures/session/sleep.sql failed: canceling statement due to statement timeout (SQLSTATE 57014)
