tests/snapshots/session__vacuous_predicate_is_inconclusive.snap
---
source: tests/session.rs
expression: out.stdout
---
notes
  ? alice  select  rows: id > 100  vacuous: the predicate matches no rows, so this check cannot fail (tests/fixtures/session/vacuous.yaml:11:15)
coverage 1/4 cells (25.0%) · 3 unspecified (warn)
notes
  ○ alice  insert, update, delete
0 failed · 0 passed · 1 inconclusive
